# athena-1d

./: INSTALL  README
doc/: athena.aux  athena.dvi  athena.ps  athena.tex  fig1.eps  fig1.fig  fig2.ps  fig3.ps  takayoshi.tex
src/: HLLE_fluxes.c  Makefile  Makefile.in  Makefile_1  Makefile_2  Makefile_3  Makefile_ADIABATIC  Makefile_HYDRO  Makefile_ISOTHERMAL  Makefile_mhd  Makefile_teuben  add1_2name.c  advect.c  athena.def  athena.def.in  athena.h  binary_dump.c  binary_dump_2d.c  configure  configure.ac  data_output.c  eigensystems_InConsVars.c  eigensystems_InPrimVars.c  init_dt.c  init_grid_block.c  init_grid_block_2d.c  integrate_1step.c  linear_wave.c  lr_fluxes.c  lr_states.c  main.c  printd.c  prototypes.h  roe_average.c  roe_fluxes.c  set_bval_arrays.c  set_ghost_zones.c  shkset.c  shu_osher.c  test1  (+3 more)
tst/1D-hydro/: athinput.einfeldt1125  athinput.einfeldt1203  athinput.fig3  athinput.leveque  athinput.noh  athinput.rj1b  athinput.rj3b  athinput.shu+osher  athinput.slow-moving-shock  athinput.sod  athinput.toro  athinput.twoibw
tst/2D-hydro/: athinput.2drp.6  athinput.sod.2d
