dnl :    edit this file and run 'autoconf' to generate a new 'configure' file


dnl -- generic things

AC_INIT(linear_wave.c)
AC_PROG_CC
AC_PROG_INSTALL

dnl -- default problem setting for ATHENA

AC_SUBST(PROBLEM)
PROBLEM=linear_wave

dnl --- precision float/double
AC_SUBST(PRECISION)
AC_ARG_ENABLE(single, [  --enable-single         single-precision], ok=$enableval, ok=no)
if test "$ok" = "yes"; then
  PRECISION="SINGLE_PREC"
else
  PRECISION="DOUBLE_PREC"
fi
echo "Precision of ATHENA = $PRECISION"

dnl --- set dimensionality of the program: DIM/XXX_D ---

AC_SUBST(DIM)
AC_SUBST(XXX_D)
AC_ARG_WITH(dim, [  --with-dim=DIM    Dimensionality of program (1,2,3)],
		with_dim=$withval, with_dim="1")
DIM=$with_dim
if test   "$with_dim" = "1"; then
  XXX_D="ONE_D"
elif test "$with_dim" = "2"; then
  XXX_D="TWO_D"
elif test "$with_dim" = "3"; then
  XXX_D="THREE_D"
else
  AC_MSG_ERROR([expected --with=dim=1,2 or 3])
fi
echo "Dimensionality of ATHENA = $DIM ($XXX_D)"

dnl -- eos

AC_SUBST(EOS)
AC_ARG_WITH(eos, [  --with-eos=EOS    Equation of state (adiabatic,isothermal)],
		with_eos=$withval, with_eos=adiabatic)
if test   "$with_eos" = "adiabatic";  then
  EOS="ADIABATIC"
elif test "$with_eos" = "isothermal"; then
  EOS="ISOTHERMAL"
else
  AC_MSG_ERROR([expected --with-eos=adiabatic or isothermal])
fi
echo "Equation of State of ATHENA = $EOS"

dnl -- gas   (or should with do --enable-b  for enabling the magnetics ??)
AC_SUBST(GAS)
AC_ARG_WITH(gas, [  --with-gas=GAS    Gas properties (mhd,hydro)],
		with_gas=$withval, with_gas=mhd)
if test   "$with_gas" = "hydro"; then
  GAS="HYDRO"
elif test "$with_gas" = "mhd";   then
  GAS="MHD"
else
  AC_MSG_ERROR([expected --with-gas=hydro or mhd])
fi
echo "Gas properties of ATHENA = $GAS"


dnl --- final warning setting ---

AC_SUBST(WARNING)
WARNING="Do not edit this file, it has been generated by configure"

dnl --- write final files ---


AC_CONFIG_FILES(Makefile athena.def)
AC_OUTPUT

